@@ -80,5 +80,8 @@ void       planner_task_tree_set_highlight_critical (PlannerTaskTree   *tree,
 						     gboolean           highlight);
 gboolean   planner_task_tree_get_highlight_critical (PlannerTaskTree   *tree);
 
+void       planner_task_tree_set_anchor (PlannerTaskTree *tree, GtkTreePath* anchor);
+GtkTreePath* planner_task_tree_get_anchor (PlannerTaskTree *tree);
+
 
 #endif /* __PLANNER_TASK_TREE_H__ */
